--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -78,17 +78,18 @@ stages:
               pool: hmcts-sds-ptl
             timeoutInMinutes: ${{ variables.timeoutInMinutes }}
             steps:
-            - task: ManualValidation@1
-              inputs:
-                approvers: "andrew.mcdevitt@HMCTS.net"
-                instructions: "Please validate the build configuration and resume"
+            ${{ if or((eq(deployment.environment, 'sbox'), eq(deployment.environment, 'stg'), eq(deployment.environment, 'prod') }}:
+              - task: ManualValidation@1
+                inputs:
+                  approvers: "andrew.mcdevitt@HMCTS.net"
+                  instructions: "Please validate the build configuration and resume"
 
-            - template: steps/terraform.yaml@cnp-azuredevops-libraries
-              parameters:
-                overrideAction: ${{ parameters.overrideAction }}
-                environment: ${{ deployment.environment }}
-                component: ${{ deployment.component }}
-                serviceConnection: ${{ deployment.service_connection }}
-                terraformInitSubscription: ${{ variables.terraformInitSubscription }}
-                product: ${{ variables.product }}
-                planCommandOptions: "-compact-warnings"
+              - template: steps/terraform.yaml@cnp-azuredevops-libraries
+                parameters:
+                  overrideAction: ${{ parameters.overrideAction }}
+                  environment: ${{ deployment.environment }}
+                  component: ${{ deployment.component }}
+                  serviceConnection: ${{ deployment.service_connection }}
+                  terraformInitSubscription: ${{ variables.terraformInitSubscription }}
+                  product: ${{ variables.product }}
+                  planCommandOptions: "-compact-warnings"
