--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -76,8 +76,21 @@ stages:
             pool: hmcts-sds-ptlsbox
           ${{ else }}:
             pool: hmcts-sds-ptl
+
           timeoutInMinutes: ${{ variables.timeoutInMinutes }}
+
           steps:
+            # Conditional manual validation step for stg and prod
+            ${{ if or(eq(deployment.environment, 'stg'), eq(deployment.environment, 'prod')) }}:
+              - task: ManualValidation@0
+                timeoutInMinutes: 1440
+                inputs:
+                  notifyUsers: |
+                    someone@example.com
+                  instructions: 'Please validate the build configuration and resume'
+                  onTimeout: 'resume'
+
+            # Always run the Terraform step
             - template: steps/terraform.yaml@cnp-azuredevops-libraries
               parameters:
                 overrideAction: ${{ parameters.overrideAction }}
