--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -72,25 +72,26 @@ stages:
       dependsOn: ${{ deployment.dependsOn }}
       jobs:
         - job: TerraformPlanApply
-          ${{ if eq(deployment.environment, 'sbox') }}:
-            pool: hmcts-sds-ptlsbox
-          ${{ else }}:
-            pool: hmcts-sds-ptl
+          pool:
+            ${{ if eq(deployment.environment, 'sbox') }}:
+              name: hmcts-sds-ptlsbox
+            ${{ else }}:
+              name: hmcts-sds-ptl
 
           timeoutInMinutes: ${{ variables.timeoutInMinutes }}
 
           steps:
-            # Conditional manual validation step for stg and prod
-            ${{ if or(eq(deployment.environment, 'stg'), eq(deployment.environment, 'prod')) }}:
+            # Conditional manual approval step for stg and prod
+            ${{ if or(eq(deployment.environment, 'sbox'),eq(deployment.environment, 'stg'), eq(deployment.environment, 'prod')) }}:
               - task: ManualValidation@0
                 timeoutInMinutes: 1440
                 inputs:
                   notifyUsers: |
-                    someone@example.com
+                    "ara.islam1@hmcts.net"
                   instructions: 'Please validate the build configuration and resume'
                   onTimeout: 'resume'
 
-            # Always run the Terraform step
+            # Terraform execution step
             - template: steps/terraform.yaml@cnp-azuredevops-libraries
               parameters:
                 overrideAction: ${{ parameters.overrideAction }}
