--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -60,11 +60,13 @@ stages:
             pool: server
             displayName: Wait for external validation
             steps:
-              - "${{ if or(eq(deployment.environment, 'sbox'), eq(deployment.environment, 'stg'), eq(deployment.environment, 'prod')) }}":
+              - "${{ if or(eq(deployment.environment, 'stg'), eq(deployment.environment, 'prod')) }}":
                   - task: ManualValidation@1
+                    timeoutInMinutes: 23160 # task times out in 2 weeks
                     inputs:
-                      approvers: andrew.mcdevitt@HMCTS.net
+                      approvers: jason.dynes1@HMCTS.net
                       instructions: Please validate the build configuration and resume
+
           - job: TerraformPlanApply
             displayName: Terraform Plan Apply
             pool:
