--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -64,7 +64,7 @@ stages:
                   - task: ManualValidation@1
                     timeoutInMinutes: 23160 # task times out in 2 weeks
                     inputs:
-                      approvers: jason.dynes1@HMCTS.net
+                      approvers: andrew.mcdevitt@HMCTS.net
                       instructions: Please validate the build configuration and resume
 
           - job: TerraformPlanApply
