--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -41,6 +41,7 @@ parameters:
         dependsOn: 'stg_aria'
       
 variables:
+  - group ARIA-TEST-group
   - name: timeoutInMinutes
     value: 240
   - name: agentImage
