adding service principle 4

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -58,6 +58,10 @@ stages:
         pool:
           vmImage: ${{ variables.agentImage }}
         steps:
+          - env:
+          client_id_test: $(client_id_test)
+          client_secret_test: $(client_secret_test)
+          tenant_id_test: $(tenant_id_test)
           - template: steps/terraform-precheck.yaml@cnp-azuredevops-libraries
             parameters:
               keyvaultName: infra-vault-nonprod
