Fixing indentation errors for second block

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -87,11 +87,6 @@ stages:
                       instructions: Please validate the build configuration and resume
 
           - job: TerraformPlanApply
-            env:
-              TF_VAR_client_id_test: $(client_id_test)
-              TF_VAR_client_secret_test: $(client_secret_test)
-              TF_VAR_tenant_id_test: $(tenant_id_test)
-
             displayName: Terraform Plan Apply
             dependsOn: waitForValidation
             pool:
@@ -101,6 +96,12 @@ stages:
                 name: hmcts-sds-ptl
             timeoutInMinutes: ${{ variables.timeoutInMinutes }}
             steps:
+              - script: echo "Adding in ariable group secrets"
+                env:
+                  TF_VAR_client_id_test: $(client_id_test)
+                  TF_VAR_client_secret_test: $(client_secret_test)
+                  TF_VAR_tenant_id_test: $(tenant_id_test)
+
               - template: steps/terraform.yaml@cnp-azuredevops-libraries
                 parameters:
                   overrideAction: ${{ parameters.overrideAction }}
