--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -42,6 +42,12 @@ parameters:
       
 variables:
   - group: ARIA-TEST-group
+  - name: TF_VAR_client_id_test
+    value: $(client_id_test)
+  - name: TF_VAR_client_secret_test
+    value: $(client_secret_test)
+  - name: TF_VAR_tenant_id_test
+    value: $(tenant_id_test)
   - name: timeoutInMinutes
     value: 240
   - name: agentImage
