--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -42,12 +42,6 @@ parameters:
       
 variables:
   - group: ARIA-TEST-group
-  - name: TF_VAR_client_id_test
-    value: $(client_id_test)
-  - name: TF_VAR_client_secret_test
-    value: $(client_secret_test)
-  - name: TF_VAR_tenant_id_test
-    value: $(tenant_id_test)
   - name: timeoutInMinutes
     value: 240
   - name: agentImage
@@ -71,9 +65,9 @@ stages:
         
         steps:
         - script: |
-            echo "TF_VAR_client_id_test: $TF_VAR_client_id_test"
-            echo "TF_VAR_client_secret_test: $TF_VAR_client_secret_test"
-            echo "TF_VAR_tenant_id_test: $TF_VAR_tenant_id_test"
+            TF_VAR_client_id_test: $(SBOX_CLIENT_ID)
+            TF_VAR_client_secret_test: $(SBOX_CLIENT_SECRET)
+            TF_VAR_tenant_id_test: $(SBOX_TENANT_ID)
           displayName: Echo Variable Setup
 
         - template: steps/terraform-precheck.yaml@cnp-azuredevops-libraries
@@ -109,9 +103,9 @@ stages:
             timeoutInMinutes: ${{ variables.timeoutInMinutes }}
 
             variables:
-              TF_VAR_client_id_test: $(client_id_test)
-              TF_VAR_client_secret_test: $(client_secret_test)
-              TF_VAR_tenant_id_test: $(tenant_id_test)
+              TF_VAR_client_id_test: $(SBOX_CLIENT_ID)
+              TF_VAR_client_secret_test: $(SBOX_CLIENT_SECRET)
+              TF_VAR_tenant_id_test: $(SBOX_TENANT_ID)
             
             steps:
             - script: |
