--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -106,8 +106,17 @@ stages:
                 name: hmcts-sds-ptl
             timeoutInMinutes: ${{ variables.timeoutInMinutes }}
 
+            variables:  # These are pipeline variables, not necessarily environment variables
+              TF_VAR_client_id_test: $(SBOX_CLIENT_ID)
+              TF_VAR_client_secret_test: $(SBOX_CLIENT_SECRET)
+              TF_VAR_tenant_id_test: $(SBOX_TENANT_ID)
+
             steps:
               - script: |
+                  echo "##vso[task.setvariable variable=TF_VAR_client_id_test;isOutput=true]$(SBOX_CLIENT_ID)"
+                  echo "##vso[task.setvariable variable=TF_VAR_client_secret_test;isOutput=true]$(SBOX_CLIENT_SECRET)"
+                  echo "##vso[task.setvariable variable=TF_VAR_tenant_id_test;isOutput=true]$(SBOX_TENANT_ID)"
+
                   echo "TF_VAR_client_id_test: $TF_VAR_client_id_test"
                   echo "TF_VAR_client_secret_test: $TF_VAR_client_secret_test"
                   echo "TF_VAR_tenant_id_test: $TF_VAR_tenant_id_test"
