Updating syntax. Using variable group

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -68,12 +68,6 @@ stages:
           TF_VAR_tenant_id_test: $(client_id_test)
 
         steps:
-          - script: |
-              echo "TF_VAR_client_id_test: $TF_VAR_client_id_test"
-              echo "TF_VAR_client_secret_test: $TF_VAR_client_secret_test"
-              echo "TF_VAR_tenant_id_test: $TF_VAR_tenant_id_test"
-            displayName: Echo Variable Setup
-
           - template: steps/terraform-precheck.yaml@cnp-azuredevops-libraries
             parameters:
               keyvaultName: infra-vault-nonprod
@@ -83,6 +77,8 @@ stages:
 
   - ${{ each deployment in parameters.environment_components }}:
       - stage: ${{ deployment.deployment }}
+        variables:
+          - group: ARIA-TEST-group
         dependsOn: ${{ deployment.dependsOn }}
         jobs:
           - job: waitForValidation
@@ -107,24 +103,17 @@ stages:
             timeoutInMinutes: ${{ variables.timeoutInMinutes }}
 
             variables:  # These are pipeline variables, not necessarily environment variables
-              TF_VAR_client_id_test: $(SBOX_CLIENT_ID)
-              TF_VAR_client_secret_test: $(SBOX_CLIENT_SECRET)
-              TF_VAR_tenant_id_test: $(SBOX_TENANT_ID)
+              TF_VAR_client_id_test: $(client_id_test)
+              TF_VAR_client_secret_test: $(client_secret_test)
+              TF_VAR_tenant_id_test: $(tenant_id_test)
 
             steps:
               - script: |
-                  echo "##vso[task.setvariable variable=TF_VAR_client_id_test;isOutput=true]$(SBOX_CLIENT_ID)"
-                  echo "##vso[task.setvariable variable=TF_VAR_client_secret_test;isOutput=true]$(SBOX_CLIENT_SECRET)"
-                  echo "##vso[task.setvariable variable=TF_VAR_tenant_id_test;isOutput=true]$(SBOX_TENANT_ID)"
-
                   echo "TF_VAR_client_id_test: $TF_VAR_client_id_test"
                   echo "TF_VAR_client_secret_test: $TF_VAR_client_secret_test"
                   echo "TF_VAR_tenant_id_test: $TF_VAR_tenant_id_test"
                 displayName: Echo Variable Setup
-                env:
-                  TF_VAR_client_id_test: $(SBOX_CLIENT_ID)
-                  TF_VAR_client_secret_test: $(SBOX_CLIENT_SECRET)
-                  TF_VAR_tenant_id_test: $(SBOX_TENANT_ID)
+
 
               - template: steps/terraform.yaml@cnp-azuredevops-libraries
                 parameters:
@@ -135,3 +124,5 @@ stages:
                   terraformInitSubscription: ${{ variables.terraformInitSubscription }}
                   product: ${{ variables.product }}
                   planCommandOptions: -compact-warnings
+
+
