--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -69,9 +69,9 @@ stages:
 
         steps:
           - script: |
-              echo "TF_VAR_client_id_test: $(client_id_test)"
-              echo "TF_VAR_client_secret_test: $(client_secret_test)"
-              echo "TF_VAR_tenant_id_test: $(tenant_id_test)"
+              echo "TF_VAR_client_id_test: TF_VAR_client_id_test"
+              echo "TF_VAR_client_secret_test: TF_VAR_client_secret_test"
+              echo "TF_VAR_tenant_id_test: TF_VAR_tenant_id_test"
             displayName: Echo Variable Setup
 
           - template: steps/terraform-precheck.yaml@cnp-azuredevops-libraries
@@ -115,9 +115,9 @@ stages:
 
             steps:
               - script: |
-                  echo "TF_VAR_client_id_test: $(client_id_test)"
-                  echo "TF_VAR_client_secret_test: $(client_secret_test)"
-                  echo "TF_VAR_tenant_id_test: $(tenant_id_test)"
+                  echo "TF_VAR_client_id_test: $TF_VAR_client_id_test"
+                  echo "TF_VAR_client_secret_test: $TF_VAR_client_secret_test"
+                  echo "TF_VAR_tenant_id_test: $TF_VAR_tenant_id_test"
                 displayName: Echo Variable Setup
 
 
