--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -9,10 +9,10 @@ pr:
 
 resources:
   repositories:
-    - repository: cnp-azuredevops-libraries
+    - repository: aria-azuredevops-libraries
       type: github
       ref: refs/heads/master
-      name: hmcts/cnp-azuredevops-libraries
+      name: hmcts/aria-azuredevops-libraries
       endpoint: hmcts
 
 parameters:
@@ -53,7 +53,7 @@ variables:
     value: dlrm-ingest
   - name: terraformInitSubscription
     value: 04d27a32-7a07-48b3-95b8-3c8691e1a263
-  - template: vars/input-variables.yaml@cnp-azuredevops-libraries
+  - template: vars/input-variables.yaml@aria-azuredevops-libraries
 
 stages:
   - stage: Precheck
@@ -65,21 +65,26 @@ stages:
         variables:
           TF_VAR_client_id_test: $(client_id_test)
           TF_VAR_client_secret_test: $(client_secret_test)
-          TF_VAR_tenant_id_test: $(client_id_test)
+          TF_VAR_tenant_id_test: $(tenant_id_test)
 
         steps:
           - script: |
-              echo "TF_VAR_client_id_test: $(TF_VAR_client_id_test)"
-              echo "TF_VAR_client_secret_test: $(TF_VAR_client_secret_test)"
-              echo "TF_VAR_tenant_id_test: $(TF_VAR_tenant_id_test)"
+              echo "##vso[task.setvariable variable=TF_VAR_client_id_test]${{ parameters.sboxClientIdTest }}"
+              echo "##vso[task.setvariable variable=TF_VAR_client_secret_test]${{ parameters.sboxClientSecretTest }}"
+              echo "##vso[task.setvariable variable=TF_VAR_tenant_id_test]${{ parameters.sboxTenantIdTest }}"
             displayName: Echo Variable Setup
 
-          - template: steps/terraform-precheck.yaml@cnp-azuredevops-libraries
+          - template: steps/terraform-precheck.yaml@aria-azuredevops-libraries
             parameters:
               keyvaultName: infra-vault-nonprod
               keyvaultSecret: azure-devops-sp-token
               serviceConnection: azurerm-sandbox
               overrideAction: ${{ parameters.overrideAction }}
+                terraformEnvironmentVariables:
+                  TF_VAR_sboxClientIdTest: $(client_id_test)
+                  TF_VAR_sboxClientSecretTest: $(client_secret_test)
+                  TF_VAR_sboxTenantIdTest: $(tenant_id_test)
+
 
   - ${{ each deployment in parameters.environment_components }}:
       - stage: ${{ deployment.deployment }}
@@ -115,13 +120,12 @@ stages:
 
             steps:
               - script: |
-                  echo "TF_VAR_client_id_test: $(TF_VAR_client_id_test)"
-                  echo "TF_VAR_client_secret_test: $(TF_VAR_client_secret_test)"
-                  echo "TF_VAR_tenant_id_test: $(TF_VAR_tenant_id_test)"
-                displayName: Echo Variable Setup
+                  echo "##vso[task.setvariable variable=TF_VAR_client_id_test]${{ parameters.sboxClientIdTest }}"
+                  echo "##vso[task.setvariable variable=TF_VAR_client_secret_test]${{ parameters.sboxClientSecretTest }}"
+                  echo "##vso[task.setvariable variable=TF_VAR_tenant_id_test]${{ parameters.sboxTenantIdTest }}"
+                displayName: 'Set Terraform Variables'
 
-
-              - template: steps/terraform.yaml@cnp-azuredevops-libraries
+              - template: steps/terraform.yaml@aria-azuredevops-libraries #clone this as a v1. Update the v1 (ARIA) repo to ensure only we use. Update naming convention at the top too.
                 parameters:
                   overrideAction: ${{ parameters.overrideAction }}
                   environment: ${{ deployment.environment }}
@@ -130,5 +134,7 @@ stages:
                   terraformInitSubscription: ${{ variables.terraformInitSubscription }}
                   product: ${{ variables.product }}
                   planCommandOptions: -compact-warnings
-
-
+                  terraformEnvironmentVariables:
+                    TF_VAR_sboxClientIdTest: $(client_id_test)
+                    TF_VAR_sboxClientSecretTest: $(client_secret_test)
+                    TF_VAR_sboxTenantIdTest: $(tenant_id_test)
