--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -63,15 +63,15 @@ stages:
           vmImage: ${{ variables.agentImage }}
 
         variables:
-          TF_VAR_client_id_test: $(client_id_test)
-          TF_VAR_client_secret_test: $(client_secret_test)
-          TF_VAR_tenant_id_test: $(tenant_id_test)
+          TF_VAR_sboxClientIdTest: $(client_id_test)
+          TF_VAR_sboxClientSecretTest: $(client_secret_test)
+          TF_VAR_sboxTenantIdTest: $(tenant_id_test)
 
         steps:
           - script: |
-              echo "##vso[task.setvariable variable=TF_VAR_client_id_test]${{ parameters.sboxClientIdTest }}"
-              echo "##vso[task.setvariable variable=TF_VAR_client_secret_test]${{ parameters.sboxClientSecretTest }}"
-              echo "##vso[task.setvariable variable=TF_VAR_tenant_id_test]${{ parameters.sboxTenantIdTest }}"
+              echo "##vso[task.setvariable variable=TF_VAR_sboxClientIdTest]$TF_VAR_sboxClientIdTest"
+              echo "##vso[task.setvariable variable=TF_VAR_sboxClientSecretTest]$TF_VAR_sboxClientSecretTest"
+              echo "##vso[task.setvariable variable=TF_VAR_sboxTenantIdTest]$TF_VAR_sboxTenantIdTest"
             displayName: Echo Variable Setup
 
           - template: steps/terraform-precheck.yaml@cnp-azuredevops-libraries
@@ -114,15 +114,15 @@ stages:
             timeoutInMinutes: ${{ variables.timeoutInMinutes }}
 
             variables:  # These are pipeline variables, not necessarily environment variables
-              TF_VAR_client_id_test: $(client_id_test)
-              TF_VAR_client_secret_test: $(client_secret_test)
-              TF_VAR_tenant_id_test: $(tenant_id_test)
+              TF_VAR_sboxClientIdTest: $(client_id_test)
+              TF_VAR_sboxClientSecretTest: $(client_secret_test)
+              TF_VAR_sboxTenantIdTest: $(tenant_id_test)
 
             steps:
               - script: |
-                  echo "##vso[task.setvariable variable=TF_VAR_client_id_test]${{ parameters.sboxClientIdTest }}"
-                  echo "##vso[task.setvariable variable=TF_VAR_client_secret_test]${{ parameters.sboxClientSecretTest }}"
-                  echo "##vso[task.setvariable variable=TF_VAR_tenant_id_test]${{ parameters.sboxTenantIdTest }}"
+                  echo "##vso[task.setvariable variable=TF_VAR_sboxClientIdTest]$TF_VAR_sboxClientIdTest"
+                  echo "##vso[task.setvariable variable=TF_VAR_sboxClientSecretTest]$TF_VAR_sboxClientSecretTest"
+                  echo "##vso[task.setvariable variable=TF_VAR_sboxTenantIdTest]$TF_VAR_sboxTenantIdTest"
                 displayName: 'Set Terraform Variables'
 
               - template: steps/terraform.yaml@cnp-azuredevops-libraries #clone this as a v1. Update the v1 (ARIA) repo to ensure only we use. Update naming convention at the top too.
