--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -107,16 +107,21 @@ stages:
                 name: hmcts-sds-ptl
             timeoutInMinutes: ${{ variables.timeoutInMinutes }}
 
-            variables:  # These are pipeline variables, not necessarily environment variables
+            variables:  # These are pipeline variables to be exported in step below before being passed into TF via template envVar input
               TF_VAR_sboxClientIdTest: $(client_id_test)
               TF_VAR_sboxClientSecretTest: $(client_secret_test)
               TF_VAR_sboxTenantIdTest: $(tenant_id_test)
 
             steps:
               - script: |
-                  echo "##vso[task.setvariable variable=TF_VAR_sboxClientIdTest]$TF_VAR_sboxClientIdTest"
-                  echo "##vso[task.setvariable variable=TF_VAR_sboxClientSecretTest]$TF_VAR_sboxClientSecretTest"
-                  echo "##vso[task.setvariable variable=TF_VAR_sboxTenantIdTest]$TF_VAR_sboxTenantIdTest"
+                  export TF_VAR_sboxClientIdTest=$(TF_VAR_sboxClientIdTest)
+                  echo "##vso[task.setvariable variable=TF_VAR_sboxClientIdTest]$(TF_VAR_sboxClientIdTest)"
+
+                  export TF_VAR_sboxClientSecretTest=$(TF_VAR_sboxClientSecretTest)
+                  echo "##vso[task.setvariable variable=TF_VAR_sboxClientSecretTest]$(TF_VAR_sboxClientSecretTest)"
+
+                  export TF_VAR_sboxTenantIdTest=$(TF_VAR_sboxTenantIdTest)
+                  echo "##vso[task.setvariable variable=TF_VAR_sboxTenantIdTest]$(TF_VAR_sboxTenantIdTest)"
                 displayName: 'Set Terraform Variables'
 
               - template: steps/terraform.yaml@cnp-azuredevops-libraries #clone this as a v1. Update the v1 (ARIA) repo to ensure only we use. Update naming convention at the top too.
