--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -108,20 +108,15 @@ stages:
             timeoutInMinutes: ${{ variables.timeoutInMinutes }}
 
             variables:  # These are pipeline variables to be exported in step below before being passed into TF via template envVar input
-              TF_VAR_sboxClientIdTest: $(client_id_test)
-              TF_VAR_sboxClientSecretTest: $(client_secret_test)
-              TF_VAR_sboxTenantIdTest: $(tenant_id_test)
+              sboxClientIdTest: $(client_id_test)
+              sboxClientSecretTest: $(client_secret_test)
+              sboxTenantIdTest: $(tenant_id_test)
 
             steps:
               - script: |
-                  export TF_VAR_sboxClientIdTest=$(TF_VAR_sboxClientIdTest)
-                  echo "##vso[task.setvariable variable=TF_VAR_sboxClientIdTest]$(TF_VAR_sboxClientIdTest)"
-
-                  export TF_VAR_sboxClientSecretTest=$(TF_VAR_sboxClientSecretTest)
-                  echo "##vso[task.setvariable variable=TF_VAR_sboxClientSecretTest]$(TF_VAR_sboxClientSecretTest)"
-
-                  export TF_VAR_sboxTenantIdTest=$(TF_VAR_sboxTenantIdTest)
-                  echo "##vso[task.setvariable variable=TF_VAR_sboxTenantIdTest]$(TF_VAR_sboxTenantIdTest)"
+                  echo "TF_VAR_client_id_test: $(sboxClientIdTest)"
+                  echo "TF_VAR_client_secret_test: $(sboxClientSecretTest)"
+                  echo "TF_VAR_tenant_id_test: $(sboxTenantIdTest)"
                 displayName: 'Set Terraform Variables'
 
               - template: steps/terraform.yaml@cnp-azuredevops-libraries #clone this as a v1. Update the v1 (ARIA) repo to ensure only we use. Update naming convention at the top too.
@@ -134,6 +129,6 @@ stages:
                   product: ${{ variables.product }}
                   planCommandOptions: -compact-warnings
                   terraformEnvironmentVariables:
-                    TF_VAR_sboxClientIdTest: $(client_id_test)
-                    TF_VAR_sboxClientSecretTest: $(client_secret_test)
-                    TF_VAR_sboxTenantIdTest: $(tenant_id_test)
+                    TF_VAR_sboxClientIdTest: $(sboxClientIdTest)
+                    TF_VAR_sboxClientSecretTest: $(sboxClientSecretTest)
+                    TF_VAR_sboxTenantIdTest: $(sboxTenantIdTest)
