adding in a config file to dbfs 7

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -1,12 +1,11 @@
+---
 trigger:
   batch: true
   branches:
     include:
       - main
-
 pr:
   - main
-
 resources:
   repositories:
     - repository: cnp-azuredevops-libraries
@@ -14,7 +13,6 @@ resources:
       ref: refs/heads/master
       name: hmcts/cnp-azuredevops-libraries
       endpoint: hmcts
-
 parameters:
   - name: overrideAction
     type: string
@@ -23,7 +21,6 @@ parameters:
       - plan
       - apply
       - destroy
-
   - name: environment_components
     type: object
     default:
@@ -32,17 +29,17 @@ parameters:
         component: aria-layer
         service_connection: DTS-DATAINGEST-SBOX
         dependsOn: Precheck
-      - deployment: stg_aria
-        environment: stg
-        component: aria-layer
-        service_connection: DTS-DATAINGEST-STG
-        dependsOn: sbox_aria
-      - deployment: prod_aria
-        environment: prod
-        component: aria-layer
-        service_connection: DTS-DATAINGEST-PROD
-        dependsOn: stg_aria
-
+      - deployment: 'stg_aria'
+        environment: 'stg'
+        component: 'aria-layer'
+        service_connection: 'DTS-DATAINGEST-STG'
+        dependsOn: 'sbox_aria'
+      - deployment: 'prod_aria'
+        environment: 'prod'
+        component: 'aria-layer'
+        service_connection: 'DTS-DATAINGEST-PROD'
+        dependsOn: 'stg_aria'
+      
 variables:
   - group: ARIA-TEST-group
   - name: timeoutInMinutes
@@ -54,45 +51,35 @@ variables:
   - name: terraformInitSubscription
     value: 04d27a32-7a07-48b3-95b8-3c8691e1a263
   - template: vars/input-variables.yaml@cnp-azuredevops-libraries
-
 stages:
   - stage: Precheck
     jobs:
-      - job: TerraformPrecheck
+      - job: null
         pool:
           vmImage: ${{ variables.agentImage }}
-
-        # variables:
-        #   TF_VAR_sboxClientIdTest: $(client_id_test)
-        #   TF_VAR_sboxClientSecretTest: $(client_secret_test)
-        #   TF_VAR_sboxTenantIdTest: $(tenant_id_test)
-
         steps:
-          # - script: |
-          #     echo "##vso[task.setvariable variable=TF_VAR_sboxClientIdTest]$TF_VAR_sboxClientIdTest"
-          #     echo "##vso[task.setvariable variable=TF_VAR_sboxClientSecretTest]$TF_VAR_sboxClientSecretTest"
-          #     echo "##vso[task.setvariable variable=TF_VAR_sboxTenantIdTest]$TF_VAR_sboxTenantIdTest"
-          #   displayName: Echo Variable Setup
+          - script: echo "Adding in variable group secrets"
+            env:
+              client_id_test: $(client_id_test)
+              client_secret_test: $(client_secret_test)
+              tenant_id_test: $(tenant_id_test)
           - template: steps/terraform-precheck.yaml@cnp-azuredevops-libraries
             parameters:
               keyvaultName: infra-vault-nonprod
               keyvaultSecret: azure-devops-sp-token
               serviceConnection: azurerm-sandbox
               overrideAction: ${{ parameters.overrideAction }}
-
-  - ${{ each deployment in parameters.environment_components }}:
+  - "${{ each deployment in parameters.environment_components }}":
       - stage: ${{ deployment.deployment }}
-        variables:
-          - group: ARIA-TEST-group
         dependsOn: ${{ deployment.dependsOn }}
         jobs:
           - job: waitForValidation
             pool: server
             displayName: Wait for external validation
             steps:
-              - ${{ if or(eq(deployment.environment, 'stg'), eq(deployment.environment, 'prod')) }}:
+              - "${{ if or(eq(deployment.environment, 'stg'), eq(deployment.environment, 'prod')) }}":
                   - task: ManualValidation@1
-                    timeoutInMinutes: 23160 # 2 weeks
+                    timeoutInMinutes: 23160 # task times out in 2 weeks
                     inputs:
                       approvers: jason.dynes1@HMCTS.net, andrew.mcdevitt@hmcts.net, ara.islam1@hmcts.net
                       instructions: Please validate the build configuration and resume
@@ -101,24 +88,23 @@ stages:
             displayName: Terraform Plan Apply
             dependsOn: waitForValidation
             pool:
-              ${{ if eq(deployment.environment, 'sbox') }}:
+              "${{ if eq(deployment.environment, 'sbox') }}":
                 name: hmcts-sds-ptlsbox
-              ${{ else }}:
+              "${{ else }}":
                 name: hmcts-sds-ptl
             timeoutInMinutes: ${{ variables.timeoutInMinutes }}
-
-            variables:  # These are pipeline variables to be exported in step below before being passed into TF via template envVar input
+                        variables:  # These are pipeline variables to be exported in step below before being passed into TF via template envVar input
               sboxClientIdTest: $(client_id_test)
               sboxClientSecretTest: $(client_secret_test)
               sboxTenantIdTest: $(tenant_id_test)
-
+ 
             steps:
               - script: |
                   echo "TF_VAR_client_id_test: $(sboxClientIdTest)"
                   echo "TF_VAR_client_secret_test: $(sboxClientSecretTest)"
                   echo "TF_VAR_tenant_id_test: $(sboxTenantIdTest)"
                 displayName: 'Set Terraform Variables'
-
+ 
               - template: steps/terraform.yaml@cnp-azuredevops-libraries #clone this as a v1. Update the v1 (ARIA) repo to ensure only we use. Update naming convention at the top too.
                 parameters:
                   overrideAction: ${{ parameters.overrideAction }}
@@ -132,3 +118,4 @@ stages:
                     TF_VAR_sboxClientIdTest: $(sboxClientIdTest)
                     TF_VAR_sboxClientSecretTest: $(sboxClientSecretTest)
                     TF_VAR_sboxTenantIdTest: $(sboxTenantIdTest)
+ 
